--- a/content/speech-and-language-processing/ch6-11.md
+++ b/content/speech-and-language-processing/ch6-11.md
@@ -1,82 +1,43 @@
 ---
-title: "6.11 Bias and Embeddings"
+title: "6.11 嵌入中的偏见"
 summary: ""
 date: 
 ---
 
-In addition to their ability to learn word meaning from text, embeddings, alas,
-also reproduce the implicit biases and stereotypes that were latent in the text. As
-the prior section just showed, embeddings can roughly model relational similar-
-ity: ‘queen’ as the closest word to ‘king’ - ‘man’ + ‘woman’ implies the analogy
-*man:woman::king:queen*. But these same embedding analogies also exhibit gender
-stereotypes. For example Bolukbasi et al. (2016) ﬁnd that the closest occupation
-to ‘computer programmer’ - ‘man’ + ‘woman’ in word2vec embeddings trained on
-news text is ‘homemaker’, and that the embeddings similarly suggest the analogy
-‘father’ is to ‘doctor’ as ‘mother’ is to ‘nurse’. This could result in what Crawford
-(2017) and Blodgett et al. (2020) call an **allocational harm**, when a system allocates
-resources (jobs or credit) unfairly to different groups. For example algorithms
-that use embeddings as part of a search for hiring potential programmers or doctors
-might thus incorrectly downweight documents with women’s names.
+除了能够从文本中学习词义之外，令人遗憾的是，嵌入还会再现文本中隐含的偏见和刻板印象。
+正如前一节所示，嵌入大致可以建模关系相似性：例如，“queen”（女王）是“king”（国王）− “man”（男人）+ “woman”（女人）最接近的词，这暗示了类比关系 *man:woman::king:queen*（男人对女人如同国王对女王）。
+然而，这些相同的嵌入类比也暴露了性别刻板印象。
+例如，Bolukbasi 等人（2016）发现，在基于新闻文本训练的 word2vec 嵌入中，“computer programmer” − “man” + “woman” 最接近的职业是 “homemaker”（家庭主妇）；
+嵌入还暗示了这样的类比：“father”（父亲）之于“doctor”（医生），如同“mother”（母亲）之于“nurse”（护士）。
+这可能导致 Crawford（2017）和 Blodgett 等人（2020）所称的**分配性伤害**（allocational harm）—— 即系统在资源（如工作机会或信贷）分配上对不同群体不公平。
+例如，若招聘算法使用嵌入来筛选潜在程序员或医生候选人，就可能错误地降低包含女性姓名文档的权重。
 
-It turns out that embeddings don’t just reﬂect the statistics of their input, but also
-**amplify** bias; gendered terms become **more** gendered in embedding space than they
-were in the input text statistics (Zhao et al. 2017, Ethayarajh et al. 2019b, Jia et al.
-2020), and biases are more exaggerated than in actual labor employment statistics
-(Garg et al., 2018).
+事实证明，嵌入不仅反映输入文本的统计特性，还会**放大**偏见：性别化术语在嵌入空间中变得比原始文本统计中**更加**性别化（Zhao 等, 2017；Ethayarajh 等, 2019b；Jia 等, 2020），且这种偏见甚至比现实劳动力就业统计数据中的偏见更为夸张（Garg 等, 2018）。
 
-Embeddings also encode the implicit associations that are a property of human
-reasoning. The Implicit Association Test (Greenwald et al., 1998) measures peo-
-ple’s associations between concepts (like ‘ﬂowers’ or ‘insects’) and attributes (like
-‘pleasantness’ and ‘unpleasantness’) by measuring differences in the latency with
-which they label words in the various categories.[^7] Using such methods, people
-in the United States have been shown to associate African-American names with
-unpleasant words (more than European-American names), male names more with
-mathematics and female names with the arts, and old people’s names with unpleas-
-ant words (Greenwald et al. 1998, Nosek et al. 2002a, Nosek et al. 2002b). Caliskan
-et al. (2017) replicated all these ﬁndings of implicit associations using GloVe vectors
-and cosine similarity instead of human latencies. For example African-American
-names like ‘Leroy’ and ‘Shaniqua’ had a higher GloVe cosine with unpleasant words
-while European-American names (‘Brad’, ‘Greg’, ‘Courtney’) had a higher cosine
-with pleasant words. These problems with embeddings are an example of a repre-
-**sentational harm** (Crawford 2017, Blodgett et al. 2020), which is a harm caused by
-a system demeaning or even ignoring some social groups. Any embedding-aware al-
-gorithm that made use of word sentiment could thus exacerbate bias against African
-Americans.
+嵌入还编码了人类推理中固有的内隐联想。
+**内隐联想测验**（Implicit Association Test, IAT；Greenwald 等, 1998）通过测量人们对不同类别词汇进行分类时的反应延迟差异，来评估其对概念（如“花朵”或“昆虫”）与属性（如“愉快”与“不愉快”）之间的联想强度。[^7]
+利用此类方法，研究发现美国民众倾向于将非裔美国人姓名与负面词汇关联（相比欧裔美国人姓名更甚），男性姓名更多与数学关联、女性姓名更多与艺术关联，老年人姓名则与负面词汇关联（Greenwald 等, 1998；Nosek 等, 2002a, 2002b）。
+Caliskan 等人（2017）使用 GloVe 向量和余弦相似度（而非人类反应时间）成功复现了所有这些内隐联想结果。
+例如，像 “Leroy” 和 “Shaniqua” 这样的非裔美国人姓名与负面词汇的 GloVe 余弦相似度更高，而像 “Brad”、“Greg”、“Courtney” 这样的欧裔美国人姓名则与正面词汇的余弦相似度更高。
+这类嵌入问题属于 Crawford（2017）和 Blodgett 等人（2020）所说的**表征性伤害**（representational harm）——即系统贬低甚至忽视某些社会群体所造成的伤害。
+因此，任何利用词情感信息的嵌入感知算法都可能加剧对非裔美国人的偏见。
 
-[^7] Roughly speaking, if humans associate ‘ﬂowers’ with ‘pleasantness’ and ‘insects’ with ‘unpleasant-
-ness’, when they are instructed to push a green button for ‘ﬂowers’ (daisy, iris, lilac) and ‘pleasant words’
-(love, laughter, pleasure) and a red button for ‘insects’ (ﬂea, spider, mosquito) and ‘unpleasant words’
-(abuse, hatred, ugly) they are faster than in an incongruous condition where they push a red button for
-‘ﬂowers’ and ‘unpleasant words’ and a green button for ‘insects’ and ‘pleasant words’.
+[^7] 简言之，如果人们将“花朵”与“愉快”、“昆虫”与“不愉快”相关联，那么当实验要求他们对“花朵”（雏菊、鸢尾、丁香）和“愉快词”（爱、欢笑、愉悦）按绿色按钮，对“昆虫”（跳蚤、蜘蛛、蚊子）和“不愉快词”（虐待、仇恨、丑陋）按红色按钮时，他们的反应速度会快于不一致条件（例如对“花朵”和“不愉快词”按红键，对“昆虫”和“愉快词”按绿键）。
 
-Recent research focuses on ways to try to remove these kinds of biases, for
-example by developing a transformation of the embedding space that removes gen-
-der stereotypes but preserves deﬁnitional gender (Bolukbasi et al. 2016, Zhao et al. 2017)
-or changing the training procedure (Zhao et al., 2018b). However, although
-these sorts of **debiasing** may reduce bias in embeddings, they do not eliminate itdebiasing
-(Gonen and Goldberg, 2019), and this remains an open problem.
+近期研究聚焦于尝试消除此类偏见的方法，例如开发一种嵌入空间变换，在去除性别刻板印象的同时保留定义性的性别差异（Bolukbasi 等, 2016；Zhao 等, 2017），或修改训练过程本身（Zhao 等, 2018b）。
+然而，尽管这类**去偏**（debiasing）方法可能减轻嵌入中的偏见，却无法彻底消除（Gonen 和 Goldberg, 2019），这仍然是一个开放性问题。
 
-Historical embeddings are also being used to measure biases in the past. Garg
-et al. (2018) used embeddings from historical texts to measure the association be-
-tween embeddings for occupations and embeddings for names of various ethnici-
-ties or genders (for example the relative cosine similarity of women’s names versus
-men’s to occupation words like ‘librarian’ or ‘carpenter’) across the 20th century.
-They found that the cosines correlate with the empirical historical percentages of
-women or ethnic groups in those occupations. Historical embeddings also repli-
-cated old surveys of ethnic stereotypes; the tendency of experimental participants in
-1933 to associate adjectives like ‘industrious’ or ‘superstitious’ with, e.g., Chinese
-ethnicity, correlates with the cosine between Chinese last names and those adjectives
-using embeddings trained on 1930s text. They also were able to document historical
-gender biases, such as the fact that embeddings for adjectives related to competence
-(‘smart’, ‘wise’, ‘thoughtful’, ‘resourceful’) had a higher cosine with male than fe-
-male words, and showed that this bias has been slowly decreasing since 1960. We
-return in later chapters to this question about the role of bias in natural language
-processing.
+历史嵌入也被用于衡量过去的偏见。Garg 等人（2018）利用历史文本训练的嵌入，测量了20世纪不同年代职业词与各种族或性别姓名之间的关联程度（例如，女性姓名与男性姓名相对于“图书管理员”或“木匠”等职业词的相对余弦相似度）。
+他们发现，这些余弦值与历史上各职业中女性或少数族裔的实际就业比例高度相关。
+历史嵌入还能复现旧有的种族刻板印象调查结果：例如，1933年实验参与者倾向于将“勤劳”或“迷信”等形容词与华人族群关联，这种倾向与使用1930年代文本训练的嵌入中，华人姓氏与这些形容词之间的余弦相似度显著相关。
+研究者还记录了历史上的性别偏见，例如，与能力相关的形容词（如“聪明”、“睿智”、“体贴”、“足智多谋”）与男性词的余弦相似度高于女性词，并且自1960年以来，这种偏见已缓慢减弱。
+
+我们将在后续章节中再次探讨自然语言处理中偏见作用这一重要议题。
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch6-10">6.10 Semantic properties of embeddings</a>
+<a href="../ch6-10">6.10 嵌入向量的语义特性</a>
 <a href="../">目录</a>
-<a href="../ch6-12">6.12 Evaluating Vector Models</a>
+<a href="../ch6-12">6.12 向量模型的评估</a>
 </nav>
 
