--- a/content/speech-and-language-processing/ch6-12.md
+++ b/content/speech-and-language-processing/ch6-12.md
@@ -1,58 +1,37 @@
 ---
-title: "6.12 Evaluating Vector Models"
+title: "6.12 向量模型的评估"
 summary: ""
 date: 
 ---
 
-The most important evaluation metric for vector models is extrinsic evaluation on
-tasks, i.e., using vectors in an NLP task and seeing whether this improves perfor-
-mance over some other model.
+向量模型最重要的评估指标是**外部评估**（extrinsic evaluation），即在实际自然语言处理任务中使用这些向量，并检验其性能是否优于其他模型。
 
-Nonetheless it is useful to have intrinsic evaluations. The most common metric
-is to test their performance on **similarity**, computing the correlation between an
-algorithm’s word similarity scores and word similarity ratings assigned by humans.
-**WordSim-353** (Finkelstein et al., 2002) is a commonly used set of ratings from 0
-to 10 for 353 noun pairs; for example ( *plane*, *car*) had an average score of 5.77.
-**SimLex-999** (Hill et al., 2015) is a more complex dataset that quantiﬁes similarity
-(*cup*, *mug*) rather than relatedness ( *cup*, *coffee*), and includes concrete and abstract
-adjective, noun and verb pairs. The **TOEFL dataset** is a set of 80 questions, each
-consisting of a target word with 4 additional word choices; the task is to choose
-which is the correct synonym, as in the example: *Levied is closest in meaning to: imposed, believed, requested, correlated*
-(Landauer and Dumais, 1997). All of these
-datasets present words without context.
+尽管如此，**内部评估**（intrinsic evaluation）仍然具有参考价值。
+最常见的内部评估方法是测试模型在**词相似性**任务上的表现：计算算法给出的词相似度得分与人类标注的词相似度评分之间的相关性。  
+**WordSim-353**（Finkelstein 等, 2002）是一个常用的数据集，包含 353 对名词，每对由人类评分为 0 到 10 分；例如，(*plane*, *car*) 的平均得分为 5.77。  
+**SimLex-999**（Hill 等, 2015）是一个更复杂的数据集，它衡量的是**语义相似性**（如 *cup* 和 *mug*）而非仅仅是**语义关联性**（如 *cup* 和 *coffee*），并涵盖了具体与抽象的形容词、名词和动词对。  
+**TOEFL 数据集** 包含 80 道题目，每道题给出一个目标词和四个备选项，任务是从中选出正确的同义词，例如：  
+> *Levied is closest in meaning to: imposed, believed, requested, correlated*  
+（Landauer 和 Dumais, 1997）。  
+所有这些数据集中的词均**不带上下文**。
 
-Slightly more realistic are intrinsic similarity tasks that include context. The
-Stanford Contextual Word Similarity (SCWS) dataset (Huang et al., 2012) and the
-Word-in-Context (WiC) dataset (Pilehvar and Camacho-Collados, 2019) offer richer
-evaluation scenarios. SCWS gives human judgments on 2,003 pairs of words in
-their sentential context, while WiC gives target words in two sentential contexts that
-are either in the same or different senses; see Appendix G. The semantic textual
-*similarity* task (Agirre et al. 2012, Agirre et al. 2015) evaluates the performance of
-sentence-level similarity algorithms, consisting of a set of pairs of sentences, each
-pair with human-labeled similarity scores.
+稍显更贴近现实的是包含上下文的内部相似性任务。
+**斯坦福上下文词相似度**（Stanford Contextual Word Similarity, SCWS）数据集（Huang 等, 2012）和 **WiC**（Word-in-Context）数据集（Pilehvar 和 Camacho-Collados, 2019）提供了更丰富的评估场景。
+SCWS 提供了 2,003 对词语在句子上下文中的相似度人工评分；而 WiC 则给出同一个目标词在两个不同句子中的用法，要求判断这两个用法是否属于同一词义（详见附录 G）。
+此外，**语义文本相似度**（Semantic Textual Similarity, STS）任务（Agirre 等, 2012, 2015）用于评估句子级相似度算法的性能，包含多对句子，每对都配有由人类标注的相似度分数。
 
-Another task used for evaluation is the analogy task, discussed on page 124,
-where the system has to solve problems of the form *a is to b as a\* is to b\**, given *a*, *b*,
-and $a^*$ and having to ﬁnd $b^*$ (Turney and Littman, 2005). A number of sets of tuples
-have been created for this task (Mikolov et al. 2013a, Mikolov et al. 2013c, Gladkova
-et al. 2016), covering morphology (*city:cities::child:children*), lexicographic rela-
-tions (*leg:table::spout:teapot*) and encyclopedia relations (*Beijing:China::Dublin:Ireland*),
-some drawing from the SemEval-2012 Task 2 dataset of 79 different relations (Jur-
-gens et al., 2012).
+另一种常用的评估任务是**类比任务**（参见第 124 页），系统需解决形如“*a 对 b 如同 a\* 对 b\**”的问题——给定 *a*、*b* 和 $a^*$，找出 $b^*$（Turney 和 Littman, 2005）。
+为此已构建了多个三元组数据集（Mikolov 等, 2013a, 2013c；Gladkova 等, 2016），涵盖形态变化（如 *city:cities::child:children*）、词典关系（如 *leg:table::spout:teapot*）、百科知识关系（如 *Beijing:China::Dublin:Ireland*）。
+其中部分数据源自 SemEval-2012 Task 2 的 79 种不同关系类型数据集（Jurgens 等, 2012）。
 
-All embedding algorithms suffer from inherent variability. For example because
-of randomness in the initialization and the random negative sampling, algorithms
-like word2vec may produce different results even from the same dataset, and in-
-dividual documents in a collection may strongly impact the resulting embeddings
-(Tian et al. 2016, Hellrich and Hahn 2016, Antoniak and Mimno 2018). When em-
-beddings are used to study word associations in particular corpora, therefore, it is
-best practice to train multiple embeddings with bootstrap sampling over documents
-and average the results (Antoniak and Mimno, 2018).
+所有嵌入算法都存在固有的变异性。
+例如，由于初始化的随机性和负采样的随机性，像 word2vec 这样的算法即使在同一数据集上运行，也可能产生不同的结果；而且语料库中的个别文档可能对最终嵌入产生显著影响（Tian 等, 2016；Hellrich 和 Hahn, 2016；Antoniak 和 Mimno, 2018）。
+因此，当使用嵌入来研究特定语料库中的词关联时，最佳实践是：通过对文档进行**自助抽样**（bootstrap sampling）多次训练嵌入模型，并对结果取平均（Antoniak 和 Mimno, 2018）。
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch6-11">6.11 Bias and Embeddings</a>
+<a href="../ch6-11">6.11 嵌入中的偏见</a>
 <a href="../">目录</a>
-<a href="../ch6-13">6.13 Summary</a>
+<a href="../ch6-13">6.13 小结</a>
 </nav>
 
