--- a/content/speech-and-language-processing/ch6-13.md
+++ b/content/speech-and-language-processing/ch6-13.md
@@ -1,162 +1,54 @@
 ---
-title: "6.13 Summary"
+title: "6.13 小结"
 summary: ""
 date: 
 ---
 
-- In vector semantics, a word is modeled as a vector—a point in high-dimensional
-space, also called an **embedding**. In this chapter we focus on static **embeddings**,
-where each word is mapped to a ﬁxed embedding.
-- Vector semantic models fall into two classes: **sparse** and **dense**. In sparse
-models each dimension corresponds to a word in the vocabulary V and cells
-are functions of **co-occurrence counts**. The **term-document** matrix has a
-row for each word (**term**) in the vocabulary and a column for each document.
-The **word-context** or **term-term** matrix has a row for each (target) word in
-the vocabulary and a column for each context term in the vocabulary. Two
-sparse weightings are common: the **tf-idf** weighting which weights each cell
-by its **term frequency** and **inverse document frequency**, and **PPMI** (point-
-wise positive mutual information), which is most common for word-context
-matrices.
-- Dense vector models have dimensionality 50–1000. **Word2vec** algorithms
-like **skip-gram** are a popular way to compute dense embeddings. Skip-gram
-trains a logistic regression classiﬁer to compute the probability that two words
-are ‘likely to occur nearby in text’. This probability is computed from the dot
-product between the embeddings for the two words.
-- Skip-gram uses stochastic gradient descent to train the classiﬁer, by learning
-embeddings that have a high dot product with embeddings of words that occur
-nearby and a low dot product with noise words.
-- Other important embedding algorithms include **GloVe**, a method based on
-ratios of word co-occurrence probabilities.
-- Whether using sparse or dense vectors, word and document similarities are
-computed by some function of the dot product between vectors. The cosine
-of two vectors—a normalized **dot product**—is the most popular such metric.
+- 在向量语义学中，一个词被建模为一个向量——即高维空间中的一个点，也称为**嵌入**（embedding）。本章聚焦于**静态嵌入**（static embeddings），其中每个词被映射到一个固定的嵌入表示。
+- 向量语义模型可分为两类：**稀疏**（sparse）和**稠密**（dense）。在稀疏模型中，每一维对应词汇表 V 中的一个词，单元格的值是**共现频次**的某种函数。**词–文档矩阵**（term-document matrix）为词汇表中的每个词（术语）设一行，为每个文档设一列。**词–上下文矩阵**（word-context 或 term-term matrix）为词汇表中的每个（目标）词设一行，为每个上下文词设一列。两种常用的稀疏加权方法是：**tf-idf** 加权，其单元格值由**词频**（term frequency）和**逆文档频率**（inverse document frequency）共同决定；**PPMI**（点互信息的正值部分，positive pointwise mutual information），常用于词–上下文矩阵。
+- 稠密向量模型的维度通常为 50–1000。**Word2vec** 算法（如 **skip-gram**）是计算稠密嵌入的流行方法。Skip-gram 训练一个逻辑回归分类器，用于估计两个词“在文本中彼此邻近出现”的概率，该概率通过两个词嵌入向量的**点积**（dot product）计算得出。
+- Skip-gram 使用随机梯度下降训练该分类器：学习得到的嵌入应与邻近词的嵌入具有高点积，而与噪声词（负样本）的嵌入具有低点积。
+- 其他重要的嵌入算法包括 **GloVe**，它基于词共现概率的比值构建嵌入。
+- 无论是使用稀疏还是稠密向量，词与文档之间的相似度都通过向量点积的某种函数来计算。其中最常用的度量是两个向量的**余弦相似度**（cosine similarity）——即归一化后的**点积**。
 
-## Bibliographical and Historical Notes
+## 参考文献与历史注记
 
-The idea of vector semantics arose out of research in the 1950s in three distinct
-ﬁelds: linguistics, psychology, and computer science, each of which contributed a
-fundamental aspect of the model.
+向量语义的思想起源于 20 世纪 50 年代三个不同领域的研究：语言学、心理学和计算机科学，每个领域都为该模型贡献了关键思想。
 
-The idea that meaning is related to the distribution of words in context was
-widespread in linguistic theory of the 1950s, among distributionalists like Zellig
-Harris, Martin Joos, and J. R. Firth, and semioticians like Thomas Sebeok. As Joos
-(1950) put it,
+20 世纪 50 年代的语言学理论中，分布主义思想广为流传。以 Zellig Harris、Martin Joos 和 J. R. Firth 为代表的分布主义者，以及 Thomas Sebeok 等符号学家，都认为词义与其在上下文中的分布密切相关。正如 Joos（1950）所言：
 
-> the linguist’s “meaning” of a morpheme. . . is by deﬁnition the set of conditional probabilities of its occurrence in context with all other morphemes.
+> 语言学家对一个语素的“意义”……按定义就是它与所有其他语素在上下文中共同出现的条件概率集合。
 
-The idea that the meaning of a word might be modeled as a point in a multi-
-dimensional semantic space came from psychologists like Charles E. Osgood, who
-had been studying how people responded to the meaning of words by assigning val-
-ues along scales like *happy/sad* or *hard/soft*. Osgood et al. (1957) proposed that the
-meaning of a word in general could be modeled as a point in a multidimensional
-Euclidean space, and that the similarity of meaning between two words could be
-modeled as the distance between these points in the space.
+将词义建模为多维语义空间中一个点的想法，则来自心理学家 Charles E. Osgood 等人的研究。他们通过让人们在诸如 *happy/sad*（快乐/悲伤）或 *hard/soft*（坚硬/柔软）等量表上对词义打分，来研究人们对词义的感知。Osgood 等人（1957）提出，一个词的意义总体上可被建模为欧几里得多维空间中的一个点，而两个词在意义上的相似性则可用它们在该空间中的距离来刻画。
 
-A ﬁnal intellectual source in the 1950s and early 1960s was the ﬁeld then called
-**mechanical indexing**, now known as **information retrieval**. In what became known
-as the **vector space model** for information retrieval (Salton 1971, Sparck Jones
-1986), researchers demonstrated new ways to deﬁne the meaning of words in terms
-of vectors (Switzer, 1965), and reﬁned methods for word similarity based on mea-
-sures of statistical association between words like mutual information (Giuliano, 1965)
-and idf (Sparck Jones, 1972), and showed that the meaning of documents
-could be represented in the same vector spaces used for words. Around the same
-time, (Cordier, 1965) showed that factor analysis of word association probabilities
-could be used to form dense vector representations of words.
+第三个思想来源是 20 世纪 50 年代末至 60 年代初被称为**机械索引**（mechanical indexing）的领域，即如今的**信息检索**（information retrieval）。在后来被称为**向量空间模型**（vector space model）的信息检索框架中（Salton, 1971；Sparck Jones, 1986），研究者提出了用向量定义词义的新方法（Switzer, 1965），并改进了基于统计关联度量（如互信息（Giuliano, 1965）和 IDF（Sparck Jones, 1972））的词相似度计算方法，同时证明文档的意义也可以用与词相同的向量空间来表示。几乎同时，Cordier（1965）展示了如何通过对词语联想概率进行因子分析，生成词的稠密向量表示。
 
-Some of the philosophical underpinning of the distributional way of thinking
-came from the late writings of the philosopher Wittgenstein, who was skeptical of
-the possibility of building a completely formal theory of meaning deﬁnitions for
-each word. Wittgenstein suggested instead that “the meaning of a word is its use in
-the language” (Wittgenstein, 1953, PI 43). That is, instead of using some logical lan-
-guage to deﬁne each word, or drawing on denotations or truth values, Wittgenstein’s
-idea is that we should deﬁne a word by how it is used by people in speaking and un-
-derstanding in their day-to-day interactions, thus preﬁguring the movement toward
-embodied and experiential models in linguistics and NLP (Glenberg and Robertson
-2000, Lake and Murphy 2021, Bisk et al. 2020, Bender and Koller 2020).
+这种分布主义思维方式的部分哲学基础来自哲学家维特根斯坦（Wittgenstein）晚年的著作。他对为每个词建立完全形式化的意义定义持怀疑态度。维特根斯坦提出：“一个词的意义就是它在语言中的用法”（Wittgenstein, 1953, 《哲学研究》第 43 节）。也就是说，我们不应试图用某种逻辑语言来定义词义，也不应依赖指称或真值条件，而应通过人们在日常言语交流中如何使用和理解词语来界定其意义。这一观点预示了后来语言学和自然语言处理中朝向**具身认知**（embodied）与**经验模型**（experiential models）的发展方向（Glenberg & Robertson, 2000；Lake & Murphy, 2021；Bisk 等, 2020；Bender & Koller, 2020）。
 
-More distantly related is the idea of deﬁning words by a vector of discrete fea-
-tures, which has roots at least as far back as Descartes and Leibniz (Wierzbicka 1992,
-Wierzbicka 1996). By the middle of the 20th century, beginning with the work of
-Hjelmslev (Hjelmslev, 1969) (originally 1943) and ﬂeshed out in early models of
-generative grammar (Katz and Fodor, 1963), the idea arose of representing mean-
-ing with **semantic features**, symbols that represent some sort of primitive meaning.
-For example words like hen, rooster, or chick, have something in common (they all
-describe chickens) and something different (their age and sex), representable as:
+更远一些的思想渊源是用一组离散特征向量来定义词义，这一理念至少可追溯至笛卡尔（Descartes）和莱布尼茨（Leibniz）（Wierzbicka, 1992, 1996）。到 20 世纪中叶，从 Hjelmslev（1969，原版发表于 1943 年）的工作开始，并在早期生成语法模型中得到进一步发展（Katz 和 Fodor, 1963），学界提出了用**语义特征**（semantic features）来表示意义的想法——这些特征是代表某种基本语义单元的符号。例如，“hen”（母鸡）、“rooster”（公鸡）和“chick”（小鸡）这几个词既有共性（都指鸡），也有差异（年龄和性别不同），可以用如下方式表示：
 
 ```text
-hen     +female, +chicken, +adult
-rooster -female, +chicken, +adult
+hen     +female, +chicken, +adult  
+rooster -female, +chicken, +adult  
 chick   +chicken, -adult
 ```
 
-The dimensions used by vector models of meaning to deﬁne words, however, are
-only abstractly related to this idea of a small ﬁxed number of hand-built dimensions.
-Nonetheless, there has been some attempt to show that certain dimensions of em-
-bedding models do contribute some speciﬁc compositional aspect of meaning like
-these early semantic features.
+然而，现代向量语义模型用于定义词义的维度，仅在抽象层面上与这种由人工构建、数量固定且有限的语义特征维度相关。尽管如此，已有研究尝试证明，嵌入模型中的某些维度确实能捕捉到类似早期语义特征那样的具体组合性语义成分。
 
-The use of dense vectors to model word meaning, and indeed the term **embedding**,
-grew out of the **latent semantic indexing** (LSI) model (Deerwester et al., 1988)
-recast as **LSA** (**latent semantic analysis**) (Deerwester et al., 1990). In LSA
-**singular value decomposition** — **SVD** — is applied to a term-document matrix (each
-cell weighted by log frequency and normalized by entropy), and then the ﬁrst 300
-dimensions are used as the LSA embedding. Singular Value Decomposition (SVD)
-is a method for ﬁnding the most important dimensions of a data set, those dimen-
-sions along which the data varies the most. LSA was then quickly widely applied:
-as a cognitive model Landauer and Dumais (1997), and for tasks like spell checking
-(Jones and Martin, 1997), language modeling (Bellegarda 1997, Coccaro and Ju-
-rafsky 1998, Bellegarda 2000), morphology induction (Schone and Jurafsky 2000,
-Schone and Jurafsky 2001b), multiword expressions (MWEs) (Schone and Juraf-
-sky, 2001a), and essay grading (Rehder et al., 1998). Related models were simul-
-taneously developed and applied to word sense disambiguation by Sch¨utze (1992b).
-LSA also led to the earliest use of embeddings to represent words in a probabilis-
-tic classiﬁer, in the logistic regression document router of Sch ¨utze et al. (1995).
-The idea of SVD on the term-term matrix (rather than the term-document matrix)
-as a model of meaning for NLP was proposed soon after LSA by Sch ¨utze (1992b).
-Sch¨utze applied the low-rank (97-dimensional) embeddings produced by SVD to the
-task of word sense disambiguation, analyzed the resulting semantic space, and also
-suggested possible techniques like dropping high-order dimensions. See Sch ¨utze
-(1997).
+使用稠密向量建模词义、乃至“**嵌入**”（embedding）这一术语本身，均源于**潜在语义索引**（Latent Semantic Indexing, LSI）模型（Deerwester 等, 1988），随后被重新表述为**潜在语义分析**（Latent Semantic Analysis, LSA）（Deerwester 等, 1990）。在 LSA 中，对词–文档矩阵（每个单元格按对数频次加权，并通过熵进行归一化）应用**奇异值分解**（Singular Value Decomposition, SVD），然后取前 300 个维度作为 LSA 嵌入。SVD 是一种找出数据集中最重要维度的方法——即数据变化最大的那些方向。LSA 随后被迅速广泛应用于多个领域：作为认知模型（Landauer 和 Dumais, 1997）、拼写检查（Jones 和 Martin, 1997）、语言建模（Bellegarda, 1997；Coccaro 和 Jurafsky, 1998；Bellegarda, 2000）、形态归纳（Schone 和 Jurafsky, 2000, 2001b）、多词表达式识别（MWEs）（Schone 和 Jurafsky, 2001a）以及作文自动评分（Rehder 等, 1998）。与此同时，Schütze（1992b）也独立开发了相关模型，并将其应用于词义消歧任务。LSA 还首次将嵌入用于概率分类器中，例如 Schütze 等人（1995）提出的基于逻辑回归的文档路由系统。不久之后，Schütze（1992b）又提出对**词–词矩阵**（而非词–文档矩阵）进行 SVD，以此作为自然语言处理中的语义模型。他将 SVD 生成的低秩（97 维）嵌入用于词义消歧任务，分析了所得语义空间的结构，并提出了诸如丢弃高阶维度等可能的技术改进（参见 Schütze, 1997）。
 
-A number of alternative matrix models followed on from the early SVD work,
-including Probabilistic Latent Semantic Indexing (PLSI) (Hofmann, 1999), Latent
-Dirichlet Allocation (LDA) (Blei et al., 2003), and Non-negative Matrix Factoriza-
-tion (NMF) (Lee and Seung, 1999).
+在早期 SVD 工作的基础上，后续又发展出多种替代性矩阵模型，包括**概率潜在语义索引**（Probabilistic Latent Semantic Indexing, PLSI）（Hofmann, 1999）、**潜在狄利克雷分配**（Latent Dirichlet Allocation, LDA）（Blei 等, 2003）以及**非负矩阵分解**（Non-negative Matrix Factorization, NMF）（Lee 和 Seung, 1999）。
 
-The LSA community seems to have ﬁrst used the word “embedding” in Landauer
-et al. (1997), in a variant of its mathematical meaning as a mapping from one space
-or mathematical structure to another. In LSA, the word embedding seems to have
-described the mapping from the space of sparse count vectors to the latent space of
-SVD dense vectors. Although the word thus originally meant the mapping from one
-space to another, it has metonymically shifted to mean the resulting dense vector in
-the latent space, and it is in this sense that we currently use the word.
+据考证，“嵌入”（embedding）一词最早由 Landauer 等人（1997）在 LSA 社群中使用，其含义源自数学中的“嵌入”概念，即从一个空间或数学结构到另一个的映射。在 LSA 中，“词嵌入”最初指的是从稀疏计数向量空间到 SVD 所得稠密潜在向量空间的映射过程。尽管该词最初强调的是“映射”本身，但后来发生了转喻性演变，如今通常指代映射后得到的潜在空间中的稠密向量——我们当前正是在这个意义上使用“嵌入”一词。
 
-By the next decade, Bengio et al. (2003) and Bengio et al. (2006) showed that
-neural language models could also be used to develop embeddings as part of the task
-of word prediction. Collobert and Weston (2007), Collobert and Weston (2008), and
-Collobert et al. (2011) then demonstrated that embeddings could be used to represent
-word meanings for a number of NLP tasks. Turian et al. (2010) compared the value
-of different kinds of embeddings for different NLP tasks. Mikolov et al. (2011)
-showed that recurrent neural nets could be used as language models. The idea of
-simplifying the hidden layer of these neural net language models to create the skip-
-gram (and also CBOW) algorithms was proposed by Mikolov et al. (2013a). The
-negative sampling training algorithm was proposed in Mikolov et al. (2013b). There
-are numerous surveys of static embeddings and their parameterizations (Bullinaria
-and Levy 2007, Bullinaria and Levy 2012, Lapesa and Evert 2014, Kiela and Clark
-2014, Levy et al. 2015).
+进入下一个十年，Bengio 等人（2003, 2006）证明，神经语言模型也可在词预测任务中同时学习出词嵌入。随后，Collobert 和 Weston（2007, 2008）以及 Collobert 等人（2011）进一步展示了嵌入可用于多种 NLP 任务中的词义表示。Turian 等人（2010）比较了不同类型嵌入在不同 NLP 任务中的效果。Mikolov 等人（2011）证明循环神经网络可用作语言模型。而 Mikolov 等人（2013a）则提出简化这类神经网络语言模型的隐藏层，从而创造出 **skip-gram**（以及 CBOW）算法。负采样（negative sampling）训练方法则由 Mikolov 等人（2013b）提出。关于静态嵌入及其参数设置，已有大量综述文献（Bullinaria 和 Levy, 2007, 2012；Lapesa 和 Evert, 2014；Kiela 和 Clark, 2014；Levy 等, 2015）。
 
-See Manning et al. (2008) and Chapter 14 for a deeper understanding of the role
-of vectors in information retrieval, including how to compare queries with docu-
-ments, more details on tf-idf, and issues of scaling to very large datasets. See Kim
-(2019) for a clear and comprehensive tutorial on word2vec. Cruse (2004) is a useful
-introductory linguistic text on lexical semantics.
-
-## Exercises
+若想更深入理解向量在信息检索中的作用（包括如何比较查询与文档、tf-idf 的更多细节，以及大规模数据集下的扩展问题），请参阅 Manning 等人（2008）及本书第 14 章。Kim（2019）提供了一篇清晰全面的 word2vec 教程。Cruse（2004）则是一本关于词汇语义学的优秀入门语言学教材。
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch6-12">6.12 Evaluating Vector Models</a>
+<a href="../ch6-12">6.12 向量模型的评估</a>
 <a href="../">目录</a>
-<a href="../ch9">第九章 Transformer</a>
+<a href="../ch9">第9章 Transformer</a>
 </nav>
 
