--- a/content/speech-and-language-processing/ch9-01.md
+++ b/content/speech-and-language-processing/ch9-01.md
@@ -208,7 +208,7 @@ $$
 
 
 <nav class="pagination justify-content-between">
-<a href="../ch9">第九章 Transformer</a>
+<a href="../ch9">第9章 Transformer</a>
 <a href="../">目录</a>
 <a href="../ch9-02">9.2 Transformer 模块</a>
 </nav>
