--- a/content/speech-and-language-processing/ch6-09.md
+++ b/content/speech-and-language-processing/ch6-09.md
@@ -28,6 +28,6 @@ date: 2025-10-25T00:18:00+08:00
 <nav class="pagination justify-content-between">
 <a href="../ch6-08">6.8 Word2vec</a>
 <a href="../">目录</a>
-<a href="../ch6-10">6.10 Semantic properties of embeddings</a>
+<a href="../ch6-10">6.10 嵌入向量的语义特性</a>
 </nav>
 
