--- a/content/decode-the-world/2025-11-06.md
+++ b/content/decode-the-world/2025-11-06.md
@@ -44,7 +44,7 @@ date: 2025-11-06T17:14:00+08:00
 
 
 <nav class="pagination justify-content-between">
-<span></span>
+<a href="../2025-11-08">修复</a>
 <a href="../">目录</a>
 <a href="../2025-11-05">输液伞</a>
 </nav>
