--- a/content/decode-the-world/2025-11-10.md
+++ b/content/decode-the-world/2025-11-10.md
@@ -60,6 +60,6 @@ date: 2025-11-10
 <nav class="pagination justify-content-between">
 <a href="../2025-11-09">AI不是替代人类，而是延伸思维</a>
 <a href="../">目录</a>
-<span></span>
+<a href="../2025-11-15">窝与翼</a>
 </nav>
 
